maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: value Nord is not a member of object plm.universe.Direction
      setDirection(Direction.Nord)
                             ^JediEscaper:41: error: value Sud is not a member of object plm.universe.Direction
      setDirection(Direction.Sud)
                             ^JediEscaper:44: error: value Est is not a member of object plm.universe.Direction
      setDirection(Direction.Est)
                             ^JediEscaper:47: error: value Ouest is not a member of object plm.universe.Direction
      setDirection(Direction.Ouest)
                             ^