maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  for (i<- 0 to getMondeLargeur()-1){
    for( j <- 0 to getMondeHauteur()-1){
      if (aBiscuit(i,j)){
        num(i,j,0)
      }
    }
  }
  var nord =0
  var sud =0
  var est = 0
  var ouest = 0
  var x =0
  var y =0
  while (!estSurBiscuit()){
    nord = 999
    sud = 999
    est = 999
    ouest = 999
    
    x = getX()
    y = getY()
    
    if (y!=0 && !aMurNord(x,y)){
      nord = getIndication(x,y-1)
    }
    if(x!=0 && !aMurOuest(x,y)){
      ouest = getIndication(x-1,y)
    }
    if(y!=getMondeHauteur()-1 && !aMurNord(x,y+1)){
      sud = getIndication(x,y+1)
    }
    if(x!=getMondeLargeur()-1 && !aMurOuest(x+1,y)){
      est = getIndication(x+1,y)
    }
    if (nord < sud && nord < ouest && nord < est){
      setDirection(Direction.Nord)
      avance()
    }else if (sud < ouest && sud < est){
      setDirection(Direction.Sud)
      avance()
    }else if(est == Math.min(est,ouest)){
      setDirection(Direction.Est)
      avance()
    }else{
      setDirection(Direction.Ouest)
      avance()
    }
    
  }
  prendBiscuit()
}



def num (x : Int, y: Int, n: Int){
  if(getIndication(x,y) == 9999 || getIndication(x,y)>n){
    setIndication(x,y,n)
    if (y == 0 && x==0){
      if(!aMurOuest(x+1,y)){
      	num(x+1,y,n+1)
      }
      if (!aMurNord(x,y+1)){
    		num(x,y+1,n+1)
      }
      
  	}else if(x==getMondeHauteur()-1 && y==0){
      if (!aMurOuest(x,y)){
    		num(x-1,y,n+1)
      }
      if (!aMurNord(x,y+1)){
    		num(x,y+1,n+1)
      }
      
  	}else if(x == getMondeHauteur()-1 && y == getMondeHauteur()-1){
      if(!aMurNord(x,y)){
    		num(x,y-1,n+1)
      }
      if(!aMurOuest(x,y)){
      	num(x-1,y,n+1)    
      }
    }else if(x==0 && y==getMondeHauteur()-1){
      if (!aMurNord(x,y)){
        num(x,y-1,n+1)
      }
      if (!aMurOuest(x+1,y)){
        num(x+1,y,n+1)
      }
      
    }else if(x == 0 && y!= 0 && y!=getMondeHauteur()-1){
      if (!aMurNord(x,y)){
        num(x, y-1, n+1)
      }
      if (!aMurNord(x,y+1)){
        num(x,y+1,n+1)
      }
      if (!aMurOuest(x+1,y)){
        num(x+1,y,n+1)
      }
      
    }else if (y==0 && x!=0 && x!=getMondeHauteur()-1){
      if (!aMurOuest(x,y)){
        num(x-1, y, n+1)
      }
      if (!aMurOuest(x+1,y)){
        num(x+1,y,n+1)
      }
      if (!aMurNord(x,y+1)){
        num(x,y+1,n+1)
      }
      
    }else if (x == getMondeHauteur()-1 && y!=0 && y!=getMondeHauteur()-1){
      if (!aMurNord(x,y)){
        num(x, y-1, n+1)
      }
      if (!aMurNord(x,y+1)){
        num(x,y+1,n+1)
      }
      if (!aMurOuest(x,y)){
        num(x-1,y,n+1)
      }
      
    }else if (y==getMondeHauteur()-1 && x!=getMondeHauteur()-1 && x!=0){
      if (!aMurNord(x,y)){
        num(x, y-1, n+1)
      }
      if (!aMurOuest(x,y)){
        num(x-1,y,n+1)
      }
      if (!aMurOuest(x+1,y)){
        num(x+1,y,n+1)
      }
      
    }else{      
      if (!aMurNord(x,y)){
        num(x, y-1, n+1)
      }
      if (!aMurNord(x,y+1)){
        num(x,y+1,n+1)
      }
      if (!aMurOuest(x+1,y)){
        num(x+1,y,n+1)
      }
      if (!aMurOuest(x,y)){
        num(x-1,y,n+1)
      }
    }
  }
}